# rimworldbuilder

./: .gitignore  CLAUDE.md  INTERFACE_GUIDE.md  QUICKSTART.md  README.md  feedback_history.json  generate_realistic_examples.py  generate_simple_examples.py  launch_ml_debug.bat  launch_ml_training.bat  launch_ml_training_poetry.bat  learned_patterns.json  learned_patterns_alpha.json  ml_training_gui.py  pyproject.toml  reddit_scraper.py  requirements-ml.txt  rimworld_assistant.py  rimworld_assistant_gui.py  rimworld_assistant_gui_v2.py  rimworld_assistant_gui_v3.py  start.bat  start.sh  test_generation.py  test_gpu.py  test_live_preview.py  test_realistic_generation.py  test_side_by_side_feedback.py  test_visual_training.py
docs/: DEV_PLAN.md
scripts/: analyze_alpha_prefabs.py  analyze_terrain_format.py  analyze_terrain_patterns.py  check_map_size.py  check_terrain_structure.py  check_under_grid.py  debug_all_bridges.py  debug_bridges.py  debug_terrain.py  decode_foundation_grid.py  decode_rimworld_terrain.py  demo_system.py  enhanced_ascii_visualize.py  explore_structures.py  final_terrain_decode.py  find_buildability_flags.py  find_completed_bridges.py  find_heavybridge_context.py  full_map_visualize.py  identify_bridges.py  interactive_visualize.py  layered_visualize.py  parse_decompressed_terrain.py  parse_deflated_terrain.py  parse_rimworld_deflate.py  parse_terrain_correctly.py  parse_terrain_for_bridges.py  pil_visualize.py  quick_visualize.py  test_base_planner.py  test_complete_system.py  test_hybrid_generation.py  test_parser.py  test_prefab_analyzer.py  test_progress.py  test_visualization.py  (+3 more)
(+41 files in other folders)
