[project]
name = "rimworld-base-assistant"
version = "0.1.0"
description = "RimWorld base-building assistant"
authors = [
    {name = "Assistant"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml (>=6.0.0,<7.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.0,<5.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "anthropic (>=0.42.0,<1.0.0)",
    "gputil (>=1.4.0,<2.0.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

